--- a/wp-content/themes/stacylauren/sass/layout/_global.scss
+++ b/wp-content/themes/stacylauren/sass/layout/_global.scss
@@ -39,7 +39,7 @@
 
 .bg {
 	width: 100vw;
-	height: 100vh;
+	/*height: 100vh;*/
 	background: url(img/bg3.png) repeat;
 	/*background-size: 75px 75px;*/
 	z-index: 100;
@@ -61,7 +61,7 @@
 }
 
 .site {
-	flex: 1 0 auto;
+	/*flex: 1 0 auto;*/
     overflow-x: hidden !important;
 }
 
@@ -163,11 +163,7 @@
 	margin: 0;
 }
 
-hr {
-	width: 30px;
-	color: $green;
-	background: $green;
-	border: none;
-	margin: 10px;
-	height: 2px;
+
+.no-overflow {
+	overflow: hidden;
 }
